2008-04-22  Martin Hunt  <hunt@redhat.com>

	* cap.c (init_cap): Detect capabilities failure and
	run with them disabled.
	
2008-04-22  Martin Hunt  <hunt@redhat.com>
	
	* mainloop.c (send_request): Move here from common.c
	staprun no longer send any messages.

2008-04-22  hunt  <hunt@redhat.com>

	* common.c (usage): Add -d option.

2008-04-21  Martin Hunt <hunt@redhat.com>

	* staprun.c, stapio.c, staprun.h, mainloop.c, staprun_funcs.c, 
	ctl.c, common.c: Add "-d" option to have staprun remove
	modules. Have staprun exec stapio and then have stapio
	exec "staprun -d" to remove the module when finished.

2008-04-16  Martin Hunt  <hunt@redhat.com>

	* ctl.c (init_ctl_channel): Remove unused parameter.
	Just opens one channel now.

2008-02-21  David Smith  <dsmith@redhat.com>

	* staprun_funcs.c (check_path): Small security fix.

2008-01-21  Martin Hunt  <hunt@redhat.com>

	* symbols.c (send_module): Simplify and use new send_data()
	function to keep longword alignment.

2008-01-14  Martin Hunt  <hunt@redhat.com>

	PR4037 and fixes to better synchronize staprun and stapio.	
	* symbols.c (send_data): Send header and data seperately, saving
	a memcpy and avoiding any alignment issues.
	(get_sections): Return -1 on error instead of just exiting
	and leaving stapio hanging. Send data in proper format even if kernel 
	pointers are different size.
	(send_module): Return -1 on error instead of just exiting
	and leaving stapio hanging.
	(do_module): Ditto.
	(compar): Removed.
	(do_kernel_symbols): Rewrite to be more robust. Return -1 on 
	error instead of just exiting and leaving stapio hanging.
	
	* staprun_funcs.c (handle_symbols): Signal stapio if we error out.
	Set kernel_ptr_size;
	
	* staprun.h (kernel_ptr_size): Declare.

	* mainloop.c (stp_main_loop): When ready, send STP_READY.

2008-01-12  Frank Ch. Eigler  <fche@elastic.org>

	PR 5603 horrible hack.
	* symbols.c (do_kernel_symbols): Make buf[256] instead of [128].

2007-12-11  Martin Hunt  <hunt@redhat.com>